background, border , id e class

--- a/CSS/jupiter.html
+++ b/CSS/jupiter.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Jupiter</h1>
+    <h1">Jupiter</h1>
     <h4>Lista de Luas</h4>
     <ul>
-        <li>Métis</li>
-        <li>Adrasteia</li>
-        <li>Amalteia</li>
-        <li>Tebe</li>
-        <li>Io</li>
-        <li>Europa</li>
-        <li>Ganímedes</li>
-        <li>Calisto</li>
-        <li>Temisto</li>
-        <li>+60</li>
+        <li class="moon">Métis</li>
+        <li class="moon">Adrasteia</li>
+        <li class="moon">Amalteia</li>
+        <li class="sun">Tebe</li>
+        <li class="rain">Io</li>
+        <li class="sun">Europa</li>
+        <li class="rain">Ganímedes</li>
+        <li class="sun">Calisto</li>
+        <li id="planeta">Temisto</li>
+        <li class="rain">+60</li>
     </ul>
 </body>
 </html>
