--- a/CSS/layoutdoGrid/exercicio.html
+++ b/CSS/layoutdoGrid/exercicio.html
@@ -5,35 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Layout</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleexercicio.css">
 </head>
 <body>
     <div class="container">
-        <div class="item item1">
+        <div class="item">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quibusdam obcaecati voluptate maxime nemo cumque ex vitae.</p>
         </div>
-        <div class="item item2">
+        <div class="item">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, aspernatur iure neque reprehenderit recusandae sequi consequuntur veniam vel. Numquam quod delectus quae!</p>
         </div>
-        <div class="item item3">
+        <div class="item">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt sequi tenetur ab.</p>
         </div>
-        <div class="item item4">
+        <div class="item">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quibusdam obcaecati voluptate maxime nemo cumque ex vitae.</p>
         </div>
-        <div class="item item5">
+        <div class="item">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, aspernatur iure neque reprehenderit recusandae sequi consequuntur veniam vel. Numquam quod delectus quae!</p>
         </div>
-        <div class="item item6">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt sequi tenetur ab.</p>
-        </div>
-        <div class="item item7">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quibusdam obcaecati voluptate maxime nemo cumque ex vitae.</p>
-        </div>
-        <div class="item item8">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, aspernatur iure neque reprehenderit recusandae sequi consequuntur veniam vel. Numquam quod delectus quae!</p>
-        </div>
-        <div class="item item9">
+        <div class="item">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt sequi tenetur ab.</p>
         </div>
     </div>
