--- a/CSS/Exercício Flex Box/index.html
+++ b/CSS/Exercício Flex Box/index.html
@@ -14,25 +14,27 @@
         </header>
         <section class="main-content">
             <div class="item">
-                <p class="parahraph">Item 1</p>
+                <p class="paragraph">Item 1</p>
             </div>
             <div class="item">
-                <p class="parahraph">Item 2</p>
+                <p class="paragraph">Item 2</p>
             </div>
             <div class="item">
-                <p class="parahraph">Item 3</p>
+                <p class="paragraph">Item 3</p>
             </div>
             <div class="item">
-                <p class="parahraph">Item 4</p>
+                <p class="paragraph">Item 4</p>
             </div>
             <div class="item">
-                <p class="parahraph">Item 5</p>
+                <p class="paragraph">Item 5</p>
             </div>
             <div class="item">
-                <p class="parahraph">Item 6</p>
+                <p class="paragraph">Item 6</p>
             </div>
         </section>
-        <footer class="footer">FOOTER</footer>
+        <footer class="footer">
+            <p class="paragraph">FOOTER</p>
+        </footer>
     </div>
 </body>
 </html>
