--- a/SASS/Aula07 - boas práticas/index.html
+++ b/SASS/Aula07 - boas práticas/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mixin</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="text">
-        <h1>Hello, World!</h1>
-        <p>Hello, World!</p>
-    </div>
+    <h1 class="title-home">Home</h1>
+    <a href="paginas-html/cadastros.html">
+        <button class="btn">Cadastro</button>
+    </a>
+    <a href="paginas-html/login.html">
+        <button class="btn">Login</button>
+    </a>
 </body>
 </html>
