--- a/SASS/Aula08 - funções/index.html
+++ b/SASS/Aula08 - funções/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mixin</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Funções</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="text">
-        <h1>Hello, World!</h1>
-        <p>Hello, World!</p>
+    <div class="title">
+        <h1>Hello World!</h1>
     </div>
 </body>
 </html>
