--- a/JavaScript/Aula 11 - exercicio cadastro e soma/Soma/soma.html
+++ b/JavaScript/Aula 11 - exercicio cadastro e soma/Soma/soma.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Recrutas</title>
+    <title>Calculadora de 4 operadores</title>
 </head>
 <body>
-    <h1>Cadastro de Recrutas</h1>
-    <script src="index.js"></script>
+    <h1>Calculadora de 4 operadores</h1>
+    <script src="soma.js"></script>
 </body>
 </html>
