--- a/JavaScript/Aula 13 - exercício velocidade e cálculo de dano/velocidade/index.html
+++ b/JavaScript/Aula 13 - exercício velocidade e cálculo de dano/velocidade/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Recrutas</title>
+    <title>Teste de Velocidade</title>
 </head>
 <body>
-    <h1>Cadastro de Recrutas</h1>
+    <h1>Teste de velocidade</h1>
+
     <script src="index.js"></script>
 </body>
 </html>
