--- a/JavaScript/aula 12 - IF e Else/index.html
+++ b/JavaScript/aula 12 - IF e Else/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Recrutas</title>
+    <title>IF e ELSE</title>
 </head>
 <body>
-    <h1>Cadastro de Recrutas</h1>
+    <h1>IF e ELSE</h1>
+
     <script src="index.js"></script>
 </body>
 </html>
